@@ -1,3 +1,6 @@
+2017-01-16 Robert Wolff <robert.wolff@cern.ch>
+	* added LHE3 weights
+
 2017-01-12 Robert Wolff <robert.wolff@cern.ch>
 	* additional ttbar and HppHmm MC samples
 
